namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-remand-and-sentencing-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-remand-and-sentencing-dev
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/audit: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "digital_warrant_folder_public"
    cloud-platform.justice.gov.uk/application: "Remand and Sentencing"
    cloud-platform.justice.gov.uk/owner: "Remand and Sentencing: calculatereleasedatesdevelopers@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-remand-and-sentencing"
    cloud-platform.justice.gov.uk/team-name: "farsight-devs"
    cloud-platform.justice.gov.uk/review-after: ""
